--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>DL2GH: Example-SMART-App</title>
+    <title>Sample SMART Application</title>
 
     <link
       rel="stylesheet"
