--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
               <li>
                 If you don't, that is okay -- an option will be displayed to
-                select them upon launch if needed.
+                select them upon launch (if needed).
               </li>
             </ul>
           </li>
@@ -35,5 +35,7 @@
         </ul>
       </li>
     </ul>
+    <br />
+    <img src="./instructions.jpg" width="40%" height="40%" />
   </body>
 </html>
